k8s/argocd-homelab/echo-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: echo-server
